--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                <a id="publicKey" href="key/" title="Nat Welch's PGP Key">My Public Key</a>
                </li>
                <li class="sortme">
-               <a href="friends.php" title="Nat Welch's Friends">My Friends</a>
+               <a href="friends/" title="Nat Welch's Friends">My Friends</a>
                </li>
                <li class="sortme">
                <a href="http://www.github.com/icco" title="Nat Welch on Github" rel="me" class="url">My GitHub</a>
