--- a/friends/index.html
+++ b/friends/index.html
@@ -8,7 +8,7 @@
    <body>
       <div id="card">
          <h1>My Friends Online</h1>
-         <div id="backButton"><a href="." title="natwelch.com">&lt;&lt; Go Back Home</a></div>
+         <div id="backButton"><a href="http://natwelch.com" title="natwelch.com">&lt;&lt; Go Back Home</a></div>
          <ul id="links">
             <li><a href="http://prenticew.com" rel="friend met co-resident" title="My Good Friend and Roomate Prentice's Site">Prentice Wongvibulsin</a> - Roommate and a great code and photographer.</li>
             <li><a href="http://www.wiredgoats.com/" rel="friend met" title="Dustin's secret site of nothing">Doc Mollo</a> - The man who got me started in Linux and a great friend.</li>
