some changes I made live

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
          </div>
          <div id="nat">
             <div id="name"><span class="fn">Nat Welch</span></div>
-            <div id="job">Student, Code Designer<br /> &amp; Courageous Knight<sup>*</sup></div>
+            <div id="job">Student, Code Crafter<div id="knight"> &amp; Courageous Knight<sup>*</sup></div</div>
          </div>
       </div> <!--! end of #container -->
 
