Small stylistic tweaks.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
       -->
       <link rel="shortcut icon" href="/favicon.ico">
       <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+      <!-- Breaks things :/
+      <link rel="stylesheet" href="includes/css/reset.css?v=1">
+      -->
       <link rel="stylesheet" href="includes/css/style.css?v=1">
       <link rel="stylesheet" media="handheld" href="includes/css/handheld.css?v=1">
       <script src="includes/js/modernizr-1.5.min.js"></script>
@@ -32,7 +35,7 @@
       <div id="container">
          <div id="data">
             <p id="first">My name is <abbr title="Nathaniel Dehn Welch">Nat</abbr>, and I am a developer and a student.</p>
-            <p>I am currently <span id='age'>22ish</span> years old and love to create things. I have a passion for design, communication, and technology. You can contact me at <a class="email" href="mailto:nat@natwelch.com">nat@natwelch.com</a> or at <span class="tel">707.799.8675</span>.</p>
+            <p>I am currently <span id='age'>22ish</span> years old and love to create things. I have a passion for design, communication, and technology. You can contact me at <a class="email" href="mailto:nat@natwelch.com">nat@natwelch.com</a> or at <a class="tel">707.799.8675</a>.</p>
             <p>My persona is scattered across the web in various places, such as: </p>
             <ul id="melinks">
                <li class="sortme">
@@ -73,6 +76,8 @@
             I am a Computer Science student at the California Polytechnic State 
             University in San Luis Obispo, more affectionately known as Cal Poly 
             SLO. Along side my major, I am working to obtain a minor in English. 
+            </p>
+            <p>
             Outside of school I am a Software Developer for <a 
                href="http://ifixit.com">iFixit</a>.
             </p>
