add a little js flair

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
       </div> <!--! end of #container -->
 
       <script src="http://ajax.googleapis.com/ajax/libs/mootools/1.2.4/mootools.js"></script>
+      <script src="includes/js/mootools-1.2.4.4-more.js"></script>
       <script src="includes/js/nat.js?v=1"></script>
       <script src="includes/js/konami.js?v=1"></script>
 
