--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
       -->
       <link rel="shortcut icon" href="/favicon.ico">
       <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-      <!-- Breaks things :/
       <link rel="stylesheet" href="includes/css/reset.css?v=1">
-      -->
       <link rel="stylesheet" href="includes/css/style.css?v=1">
       <link rel="stylesheet" media="handheld" href="includes/css/handheld.css?v=1">
       <script src="includes/js/modernizr-1.5.min.js"></script>
@@ -84,7 +82,7 @@
             <p><small><em>* Knighthood self-proclaimed.</em></small></p>
          </div>
          <div id="nat">
-            <div id="name"><span class="fn">Nat Welch</span></div>
+            <div id="name">Nat Welch</div>
             <div id="job">Student, Code Crafter<div id="knight"> &amp; Courageous Knight<sup>*</sup></div</div>
          </div>
       </div> <!--! end of #container -->
