Fixes friends page

--- a/friends/index.html
+++ b/friends/index.html
@@ -1,27 +1,62 @@
-<html>
+<!doctype html>
+<html lang="en" class="no-js">
    <head profile="http://gmpg.org/xfn/11">
-      <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+      <meta charset="utf-8">
       <title>Nat Welch Dot Com > Friends</title>
-      <meta name="Keywords" content="Nat, welch, natwelch, nathaniel, nathanielwelch, dehn, code, student, developer, software" />
-      <link href="includes/css/style.css" rel="stylesheet" type="text/css" />
-   </head>
-   <body>
-      <div id="card">
-         <h1>My Friends Online</h1>
-         <div id="backButton"><a href="http://natwelch.com" title="natwelch.com">&lt;&lt; Go Back Home</a></div>
-         <ul id="links">
-            <li><a href="http://prenticew.com" rel="friend met co-resident" title="My Good Friend and Roomate Prentice's Site">Prentice Wongvibulsin</a> - Roommate and a great code and photographer.</li>
-            <li><a href="http://www.wiredgoats.com/" rel="friend met" title="Dustin's secret site of nothing">Doc Mollo</a> - The man who got me started in Linux and a great friend.</li>
-            <li><a href="http://mgius.livejournal.com/" title="mgius's Livejournal. Angst Ensues" rel="friend co-resident met" >Mark Gius</a> - Roommate and good friend.</li>
-            <li><a href="http://users.csc.calpoly.edu/~boppenhe/" title="Brian's Webpage" rel="friend met">Brian Oppenheim</a> - Probably one of the most diligent and impressive coders I know.</li>
-            <li><a href="http://www.lydiadehn.com/" title="Mom" rel="met parent">Lydia Dehn</a> - My mom and her Art.</li>
-            <li><a href="http://dmpatierno.com/" rel="friend met co-worker" title="dave patierno">Dave Patierno</a> - Good friend and coworker.</li>
 
-            <!-- Commented out until he gets his act together...
-            <li><a href="http://www.dcwelch.com/" rel="met parent">David Welch</a></li>
-            -->
-         </ul>
-      </div>
+      <meta name="keywords" content="Nat, welch, natwelch, nathaniel, nathanielwelch, dehn, code, student, developer, software" />
+      <meta name="author" content="Nat Welch">
+
+      <link href="../includes/css/style.css" rel="stylesheet" type="text/css" />
+      <link rel="shortcut icon" href="/favicon.ico">
+      <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+      <link rel="stylesheet" href="includes/css/reset.css?v=2">
+      <link rel="stylesheet" href="includes/css/style.css?v=2">
+      <link rel="stylesheet" media="handheld" href="includes/css/handheld.css?v=1">
+      <script src="includes/js/modernizr-1.5.min.js"></script>
+   </head>
+   <!--[if lt IE 7 ]> <body class="ie6"> <![endif]-->
+   <!--[if IE 7 ]>    <body class="ie7"> <![endif]-->
+   <!--[if IE 8 ]>    <body class="ie8"> <![endif]-->
+   <!--[if IE 9 ]>    <body class="ie9"> <![endif]-->
+   <!--[if (gt IE 9)|!(IE)]><!--> <body> <!--<![endif]-->
+      <div id="container">
+         <div id="friends">
+         <h1>My Friends Online</h1>
+            <div id="backButton"><a href=".." title="natwelch.com">&laquo; Go Back Home</a></div>
+            <ul id="links">
+               <li><a href="http://prenticew.com" rel="friend met co-resident" title="My Good Friend and Roomate Prentice's Site">Prentice Wongvibulsin</a> - Roommate and a great code and photographer.</li>
+               <li><a href="http://www.wiredgoats.com/" rel="friend met" title="Dustin's secret site of nothing">Doc Mollo</a> - The man who got me started in Linux and a great friend.</li>
+               <li><a href="http://mgius.livejournal.com/" title="mgius's Livejournal. Angst Ensues" rel="friend co-resident met" >Mark Gius</a> - Roommate and good friend.</li>
+               <li><a href="http://users.csc.calpoly.edu/~boppenhe/" title="Brian's Webpage" rel="friend met">Brian Oppenheim</a> - Probably one of the most diligent and impressive coders I know.</li>
+               <li><a href="http://www.lydiadehn.com/" title="Mom" rel="met parent">Lydia Dehn</a> - My mom and her Art.</li>
+               <li><a href="http://dmpatierno.com/" rel="friend met co-worker" title="dave patierno">Dave Patierno</a> - Good friend and coworker.</li>
+
+               <!-- Commented out until he gets his act together...
+               <li><a href="http://www.dcwelch.com/" rel="met parent">David Welch</a></li>
+               -->
+            </ul>
+         </div>
+      </div> <!--! end of #container -->
+
       <!--"Why, Mr. Anderson? Why, why, why? Why do you do it? Why, why get up? Why keep fighting? Do you believe you're fighting for something, for more than your survival? Can you tell me what it is, do you even know? Is it freedom, or truth, perhaps peace, could it be for love? Illusions, Mr. Anderson, vagaries of perception. Temporary constructs of a feeble human intellect trying desperately to justify an existence that is without meaning or purpose! And all of them as artificial as the matrix itself, although only a human mind could invent something as insipid as love. You must be able to see it Mr. Anderson, you must know it by now. You can't win, it's pointless to keep fighting! Why, Mr. Anderson, why? Why do you persist?" - Agent Smith -->
+
+      <script src="http://ajax.googleapis.com/ajax/libs/mootools/1.2.4/mootools.js"></script>
+      <script src="includes/js/mootools-1.2.4.4-more.js"></script>
+      <script src="includes/js/nat.js?v=1"></script>
+      <script src="includes/js/konami.js?v=1"></script>
+
+      <!--[if lt IE 7 ]>
+         <script src="js/dd_belatedpng.js?v=1"></script>
+      <![endif]-->
+      <script>
+         var _gaq = [['_setAccount', 'UA-333449-2'], ['_trackPageview']];
+         (function(d, t) {
+            var g = d.createElement(t), s = d.getElementsByTagName(t)[0];
+            g.async = true;
+            g.src = '//www.google-analytics.com/ga.js';
+            s.parentNode.insertBefore(g, s);
+         })(document, 'script');
+      </script>
    </body>
 </html>
