--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div id="container">
          <div id="data">
             <p id="first">My name is <abbr title="Nathaniel Dehn Welch">Nat</abbr>, and I am a developer and a student.</p>
-            <p>I am currently <span id='age'>22ish</span> years old and love to create things. I have a passion for design, communication, and technology. You can contact me at <a class="email" href="mailto:nat@natwelch.com">nat@natwelch.com</a> or at <a class="tel">707.799.8675</a>.</p>
+            <p>I am currently <span id='age'>22</span> years old and love to create things. I have a passion for design, communication, and technology. You can contact me at <a class="email" href="mailto:nat@natwelch.com">nat@natwelch.com</a> or at <a class="tel">707.799.8675</a>.</p>
             <p>My persona is scattered across the web in various places, such as: </p>
             <ul id="melinks">
                <li class="sortme">
@@ -71,10 +71,11 @@
                </li>
             </ul>
             <p>
-            I am a Computer Science student at the California Polytechnic State 
-            University in San Luis Obispo, more affectionately known as Cal Poly 
-            SLO. Along side my major, I am working to obtain a minor in English. 
+            I am a Computer Science student with a minor in english at the
+            California Polytechnic State University in San Luis Obispo, more
+            affectionately known as Cal Poly SLO.
             </p>
+
             <p>
             Outside of school I am a Software Developer for <a 
                href="http://ifixit.com">iFixit</a>.
