--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!doctype html>
 <html lang="en" class="no-js">
    <head profile="http://purl.org/uF/2008/03/">
+
+      <link href='http://fonts.googleapis.com/css?family=Cardo' rel='stylesheet' type='text/css'>
+      <link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
+
       <meta charset="utf-8">
       <title>Nat Welch Dot Com</title>
 
