updated css. added ids to li

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <link rel="shortcut icon" href="/favicon.ico">
       <link rel="apple-touch-icon" href="/apple-touch-icon.png">
       <link rel="stylesheet" href="includes/css/reset.css?v=2">
-      <link rel="stylesheet" href="includes/css/style.css?v=2">
+      <link rel="stylesheet" href="includes/css/style.css?v=3">
       <link rel="stylesheet" media="handheld" href="includes/css/handheld.css?v=1">
       <script src="includes/js/modernizr-1.5.min.js"></script>
    </head>
@@ -40,17 +40,17 @@
             <p>I am currently <span id='age'>22</span> years old and love to create things. I have a passion for design, communication, and technology. You can contact me at <a class="email" href="mailto:nat@natwelch.com">nat@natwelch.com</a> or at <a class="tel">707.799.8675</a>.</p>
             <p>My persona is scattered across the web in various places, such as: </p>
             <ul id="melinks">
-               <li class="sortme"> <a href="http://pseudoweb.net" rel="me" title="Nat Welch's Blog" class="url">My Blog</a> </li>
-               <li class="sortme"> <a href="http://flickr.com/photos/icco" title="Photos" rel="me" class="url">My Photos <small>(on Flickr)</small></a> </li>
-               <li class="sortme"> <a href="resume/" title="Resume in PDF form" rel="me" onclick="javascript:urchinTracker('/resume')">My Resume <small>(PDF)</small></a> </li>
-               <li class="sortme"> <a href="http://www.linkedin.com/in/natwelch" title="Nathaniel Welch on LinkedIn" rel="me" class="url" >My LinkedIn</a> </li>
-               <li class="sortme"> <a href="http://www.github.com/icco" title="Nat Welch on Github" rel="me" class="url">My GitHub</a> </li>
-               <li class="sortme"> <a href="http://twitter.com/icco" title="Nat Welch on Twitter" rel="me" class="url">My Twitter</a> </li>
-               <li class="sortme"> <a href="http://www.last.fm/user/icco/" title="Nat Welch on Last.FM" rel="me" class="url">My Last.FM</a> </li>
-               <li class="sortme"> <a href="http://www.delicious.com/calvin166" title="Nat Welch on Delicious" rel="me" class="url">My Del.icio.us</a> </li>
-               <li class="sortme"> <a id="publicKey" href="key/" title="Nat Welch's PGP Key">My Public Key</a> </li>
-               <li class="sortme"> <a href="friends/" title="Nat Welch's Friends">My Friends</a> </li>
-               <li class="sortme" style="display: none;"> <a href="http://natwelch.com" title="Nat Welch Dot Com" rel="me" class="url">My Website</a> </li>
+               <li class="sortme" id="link-blog"> <a href="http://pseudoweb.net" rel="me" title="Nat Welch's Blog" class="url">My Blog</a> </li>
+               <li class="sortme" id="link-photos"> <a href="http://flickr.com/photos/icco" title="Photos" rel="me" class="url">My Photos <small>(on Flickr)</small></a> </li>
+               <li class="sortme" id="link-resume"> <a href="resume/" title="Resume in PDF form" rel="me" onclick="javascript:urchinTracker('/resume')">My Resume <small>(PDF)</small></a> </li>
+               <li class="sortme" id="link-linkedin"> <a href="http://www.linkedin.com/in/natwelch" title="Nathaniel Welch on LinkedIn" rel="me" class="url" >My LinkedIn</a> </li>
+               <li class="sortme" id="link-github"> <a href="http://www.github.com/icco" title="Nat Welch on Github" rel="me" class="url">My GitHub</a> </li>
+               <li class="sortme" id="link-twitter"> <a href="http://twitter.com/icco" title="Nat Welch on Twitter" rel="me" class="url">My Twitter</a> </li>
+               <li class="sortme" id="link-lastfm"> <a href="http://www.last.fm/user/icco/" title="Nat Welch on Last.FM" rel="me" class="url">My Last.FM</a> </li>
+               <li class="sortme" id="link-delicious"> <a href="http://www.delicious.com/calvin166" title="Nat Welch on Delicious" rel="me" class="url">My Del.icio.us</a> </li>
+               <li class="sortme" id="link-key"> <a id="publicKey" href="key/" title="Nat Welch's PGP Key">My Public Key</a> </li>
+               <li class="sortme" id="link-friends"> <a href="friends/" title="Nat Welch's Friends">My Friends</a> </li>
+               <li class="sortme" id="link-homepage"> <a href="http://natwelch.com" title="Nat Welch Dot Com" rel="me" class="url">My Website</a> </li>
             </ul>
             <p>
             I am a Computer Science student with a minor in english at the
@@ -72,7 +72,7 @@
 
       <script src="http://ajax.googleapis.com/ajax/libs/mootools/1.2.4/mootools.js"></script>
       <script src="includes/js/mootools-1.2.4.4-more.js"></script>
-      <script src="includes/js/nat.js?v=1"></script>
+      <script src="includes/js/nat.js?v=3"></script>
       <script src="includes/js/konami.js?v=1"></script>
 
       <!--[if lt IE 7 ]>
