--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <link rel="shortcut icon" href="/favicon.ico">
       <link rel="apple-touch-icon" href="/apple-touch-icon.png">
       <link rel="stylesheet" href="includes/css/reset.css?v=2">
-      <link rel="stylesheet" href="includes/css/style.css?v=3">
+      <link rel="stylesheet" href="includes/css/style.css?v=4">
       <link rel="stylesheet" media="handheld" href="includes/css/handheld.css?v=1">
       <script src="includes/js/modernizr-1.5.min.js"></script>
    </head>
@@ -35,7 +35,7 @@
    <!--[if IE 9 ]>    <body class="ie9"> <![endif]-->
    <!--[if (gt IE 9)|!(IE)]><!--> <body> <!--<![endif]-->
       <div id="container">
-         <div id="data">
+         <div class="data" id="data1">
             <p id="first">My name is <abbr title="Nathaniel Dehn Welch">Nat</abbr>, and I am a developer and a student.</p>
             <p>I am currently <span id='age'>22</span> years old and love to create things. I have a passion for design, communication, and technology. You can contact me at <a class="email" href="mailto:nat@natwelch.com">nat@natwelch.com</a> or at <a class="tel">707.799.8675</a>.</p>
             <p>My persona is scattered across the web in various places, such as: </p>
@@ -68,11 +68,47 @@
             <div id="name">Nat Welch</div>
             <div id="job">Student, Code Crafter<div id="knight"> &amp; Courageous Knight<sup>*</sup></div</div>
          </div>
+         <div class="data" id="data2">
+            <script src="http://widgets.twimg.com/j/2/widget.js"></script>
+            <script>
+            new TWTR.Widget({
+              version: 2,
+              type: 'profile',
+              rpp: 7,
+              interval: 6000,
+              width: 340,
+              height: 550,
+              theme: {
+                shell: {
+                  background: '#ffffff',
+                  color: '#444444'
+                },
+                tweets: {
+                  background: '#ffffff',
+                  color: '#444444',
+                  links: '#607890'
+                }
+              },
+              features: {
+                scrollbar: true,
+                loop: false,
+                live: true,
+                hashtags: true,
+                timestamp: true,
+                avatars: false,
+                behavior: 'all'
+              }
+            }).render().setUser('icco').start();
+            </script>
+         </div>
+         <div class="data" id="data3">
+            <script type="text/javascript" src="http://feeds.www.delicious.com/v2/js/calvin166?title=My%20Delicious%20Bookmarks&icon=s&count=7&bullet=%C2%BB&sort=date&extended&name&showadd"></script> 
+         </div>
       </div> <!--! end of #container -->
 
       <script src="http://ajax.googleapis.com/ajax/libs/mootools/1.2.4/mootools.js"></script>
       <script src="includes/js/mootools-1.2.4.4-more.js"></script>
-      <script src="includes/js/nat.js?v=3"></script>
+      <script src="includes/js/nat.js?v=4"></script>
       <script src="includes/js/konami.js?v=1"></script>
 
       <!--[if lt IE 7 ]>
