--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             <ul id="melinks">
                <li class="sortme" id="link-blog"> <a href="http://pseudoweb.net" rel="me" title="Nat Welch's Blog" class="url">My Blog</a> </li>
                <li class="sortme" id="link-photos"> <a href="http://flickr.com/photos/icco" title="Photos" rel="me" class="url">My Photos <small>(on Flickr)</small></a> </li>
+               <li class="sortme" id="link-code"> <a href="http://icco.github.com" title="My Code on GitHub" rel="me" class="url">My Code + Projects</a> </li>
                <li class="sortme" id="link-resume"> <a href="resume/" title="Resume in PDF form" rel="me" onclick="javascript:urchinTracker('/resume')">My Resume <small>(PDF)</small></a> </li>
                <li class="sortme" id="link-linkedin"> <a href="http://www.linkedin.com/in/natwelch" title="Nathaniel Welch on LinkedIn" rel="me" class="url" >My LinkedIn</a> </li>
                <li class="sortme" id="link-github"> <a href="http://www.github.com/icco" title="Nat Welch on Github" rel="me" class="url">My GitHub</a> </li>
