Turning off kb nav.

--- a/index.html
+++ b/index.html
@@ -103,7 +103,9 @@
             </script>
          </div>
          <div class="data" id="data3">
+            <!-- Does not work...
             <script type="text/javascript" src="http://feeds.www.delicious.com/v2/js/calvin166?title=My%20Delicious%20Bookmarks&icon=s&count=7&bullet=%C2%BB&sort=date&extended&name&showadd"></script> 
+            -->
          </div>
       </div> <!--! end of #container -->
 
