--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
          </div>
          <div id="nat">
             <div id="name">Nat Welch</div>
-            <div id="job">Student, Code Crafter<div id="knight"> &amp; Courageous Knight<sup>*</sup></div</div>
+            <div id="job">Student, Code Crafter<div id="knight"> &amp; Courageous Knight<sup>*</sup></div></div>
          </div>
          <div class="data" id="data2">
             <script src="http://widgets.twimg.com/j/2/widget.js"></script>
