clean up friends

--- a/friends/index.html
+++ b/friends/index.html
@@ -27,20 +27,23 @@
    <!--[if (gt IE 9)|!(IE)]><!--> <body> <!--<![endif]-->
       <div id="container">
          <div id="friends">
-         <h1>My Friends Online</h1>
-            <div id="backButton"><a href=".." title="natwelch.com">&laquo; Go Back Home</a></div>
+            <h1>People I know and like</h1>
+             <small>who also have a web presence...</small>
             <ul id="links">
-               <li><a href="http://prenticew.com" rel="friend met co-resident" title="My Good Friend and Roomate Prentice's Site">Prentice Wongvibulsin</a> - Roommate and a great code and photographer.</li>
-               <li><a href="http://www.wiredgoats.com/" rel="friend met" title="Dustin's secret site of nothing">Doc Mollo</a> - The man who got me started in Linux and a great friend.</li>
+               <li><a href="http://prenticew.com" rel="friend met co-resident" title="Prentice's Site">Prentice Wongvibulsin</a> - Roommate and an amazing coder and photographer.</li>
+               <li><a href="http://dmpatierno.com/" rel="friend met co-worker" title="Dave Patierno">Dave Patierno</a> - Good friend and coworker.</li>
+               <li><a href="http://www.wiredgoats.com/" rel="friend met" title="Dustin's secret site of nothing">Dustin Mollo</a> - The man who got me started in Linux and a great friend.</li>
                <li><a href="http://mgius.livejournal.com/" title="mgius's Livejournal. Angst Ensues" rel="friend co-resident met" >Mark Gius</a> - Roommate and good friend.</li>
                <li><a href="http://users.csc.calpoly.edu/~boppenhe/" title="Brian's Webpage" rel="friend met">Brian Oppenheim</a> - Probably one of the most diligent and impressive coders I know.</li>
                <li><a href="http://www.lydiadehn.com/" title="Mom" rel="met parent">Lydia Dehn</a> - My mom and her Art.</li>
-               <li><a href="http://dmpatierno.com/" rel="friend met co-worker" title="dave patierno">Dave Patierno</a> - Good friend and coworker.</li>
+               <li><a href="http://grantlandchew.com/" rel="friend met" title="Grantland Chew">Grantland Chew</a> - A great coder with an awesome sense of style.</li>
+               <li><a href="http://reedmorse.com/" rel="friend met" title="Reed Morse">Reed Morse</a> - Great designer, entrepreneur and developer.</li>
 
                <!-- Commented out until he gets his act together...
                <li><a href="http://www.dcwelch.com/" rel="met parent">David Welch</a></li>
                -->
             </ul>
+            <div id="backButton"><a href=".." title="natwelch.com">&laquo; Go Back Home</a></div>
          </div>
       </div> <!--! end of #container -->
 
