--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html lang="en" class="no-js">
    <head>
-
       <link href='http://fonts.googleapis.com/css?family=Cardo' rel='stylesheet' type='text/css'>
       <link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
 
@@ -50,7 +49,7 @@
                <li class="sortme" id="link-github"> <a href="http://www.github.com/icco" title="Nat Welch on Github" rel="me" class="url">My GitHub</a> </li>
                <li class="sortme" id="link-twitter"> <a href="http://twitter.com/icco" title="Nat Welch on Twitter" rel="me" class="url">My Twitter</a> </li>
                <li class="sortme" id="link-lastfm"> <a href="http://www.last.fm/user/icco/" title="Nat Welch on Last.FM" rel="me" class="url">My Last.FM</a> </li>
-               <li class="sortme" id="link-delicious"> <a href="http://www.delicious.com/calvin166" title="Nat Welch on Delicious" rel="me" class="url">My Del.icio.us</a> </li>
+               <li class="sortme" id="link-delicious"> <a href="http://pinboard.in/u:icco" title="Nat Welch on PinBoard" rel="me" class="url">My Links <small>(on PinBoard)</small></a> </li>
                <li class="sortme" id="link-key"> <a id="publicKey" href="key/" title="Nat Welch's PGP Key">My Public Key</a> </li>
                <li class="sortme" id="link-friends"> <a href="friends/" title="Nat Welch's Friends">My Friends</a> </li>
                <li class="sortme" id="link-homepage"> <a href="http://natwelch.com" title="Nat Welch Dot Com" rel="me" class="url">My Website</a> </li>
