--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="no-js">
+<html lang="en">
    <head>
       <link href='http://fonts.googleapis.com/css?family=Cardo' rel='stylesheet' type='text/css'>
       <link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
@@ -13,28 +13,16 @@
       <meta name="keywords" content="Nat, welch, natwelch, nathaniel, nathanielwelch, dehn, code, student, developer, software" />
       <meta name="author" content="Nat Welch">
 
+      <!-- OPENID Settings -->
       <link rel="openid.server" href="https://openid.claimid.com/server" />
       <link rel="openid.delegate" href="https://openid.claimid.com/icco" />
 
-      <!--  Mobile Viewport Fix
-      j.mp/mobileviewport & davidbcalhoun.com/2010/viewport-metatag 
-      device-width : Occupy full width of the screen in its current orientation
-      initial-scale = 1.0 retains dimensions instead of zooming out if page height > device height
-      maximum-scale = 1.0 retains dimensions instead of zooming in if page width < device width
-      <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">
-      -->
       <link rel="shortcut icon" href="/favicon.ico">
       <link rel="apple-touch-icon" href="/apple-touch-icon.png">
       <link rel="stylesheet" href="includes/css/reset.css?v=3">
       <link rel="stylesheet" href="includes/css/style.css?v=5">
-      <link rel="stylesheet" media="handheld" href="includes/css/handheld.css?v=1">
-      <script src="includes/js/modernizr-1.5.min.js"></script>
    </head>
-   <!--[if lt IE 7 ]> <body class="ie6"> <![endif]-->
-   <!--[if IE 7 ]>    <body class="ie7"> <![endif]-->
-   <!--[if IE 8 ]>    <body class="ie8"> <![endif]-->
-   <!--[if IE 9 ]>    <body class="ie9"> <![endif]-->
-   <!--[if (gt IE 9)|!(IE)]><!--> <body> <!--<![endif]-->
+   <body>
       <div id="container">
          <div class="data" id="data1">
             <p id="first">My name is <abbr title="Nathaniel Dehn Welch">Nat</abbr>, and I am a developer and a student.</p>
@@ -54,32 +42,23 @@
                <li class="sortme" id="link-friends"> <a href="friends/" title="Nat Welch's Friends">My Friends</a> </li>
                <li class="sortme" id="link-homepage"> <a href="http://natwelch.com" title="Nat Welch Dot Com" rel="me" class="url">My Website</a> </li>
             </ul>
-            <p>
-            I am a Computer Science student with a minor in english at the
-            California Polytechnic State University in San Luis Obispo, more
-            affectionately known as Cal Poly SLO.
-            </p>
 
-            <p>
-            Outside of school I am a Software Developer for <a 
-               href="http://ifixit.com">iFixit</a>.
-            </p>
+            <p>I am a Computer Science student with a minor in english at the California Polytechnic State University in San Luis Obispo, more affectionately known as Cal Poly SLO.</p>
+
+            <p>Outside of school I am a Software Developer for <a href="http://ifixit.com">iFixit</a>.</p>
+
             <p><small><em>* Knighthood self-proclaimed.</em></small></p>
          </div>
          <div id="nat">
             <div id="name">Nat Welch</div>
             <div id="job">Student, Code Crafter<div id="knight"> &amp; Courageous Knight<sup>*</sup></div></div>
          </div>
-      </div> <!--! end of #container -->
+      </div>
 
       <script src="http://ajax.googleapis.com/ajax/libs/mootools/1.2.4/mootools.js"></script>
       <script src="includes/js/mootools-1.2.4.4-more.js"></script>
       <script src="includes/js/nat.js?v=5"></script>
       <script src="includes/js/konami.js?v=1"></script>
-
-      <!--[if lt IE 7 ]>
-         <script src="js/dd_belatedpng.js?v=1"></script>
-      <![endif]-->
       <script>
          var _gaq = [['_setAccount', 'UA-333449-2'], ['_trackPageview']];
          (function(d, t) {
