Won't be able to finish minor before graduation.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                <li class="sortme" id="link-homepage"> <a href="http://natwelch.com" title="Nat Welch Dot Com" rel="me" class="url">My Website</a> </li>
             </ul>
 
-            <p>I am a Computer Science student with a minor in english at the California Polytechnic State University in San Luis Obispo, more affectionately known as Cal Poly SLO.</p>
+            <p>I am a Computer Science student at the California Polytechnic State University in San Luis Obispo, more affectionately known as Cal Poly SLO.</p>
 
             <p>Outside of school I am a Software Developer for <a href="http://ifixit.com">iFixit</a>.</p>
 
