--- a/index.html
+++ b/index.html
@@ -68,5 +68,6 @@
             s.parentNode.insertBefore(g, s);
          })(document, 'script');
       </script>
+      <!-- Copyright Nat Welch 2011 -->
    </body>
 </html>
