--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <meta name="author" content="Nat Welch">
 
       <!-- OPENID Settings -->
-      <link rel="openid.server" href="https://openid.claimid.com/server" />
+      <link rel="openid.server"   href="https://openid.claimid.com/server" />
       <link rel="openid.delegate" href="https://openid.claimid.com/icco" />
 
       <link rel="shortcut icon" href="/favicon.ico">
@@ -25,14 +25,14 @@
    <body>
       <div id="container">
          <div class="data" id="data1">
-            <p id="first">My name is <abbr title="Nathaniel Dehn Welch">Nat</abbr>, and I am a developer and a student.</p>
-            <p>I am currently <span id='age'>22</span> years old and love to create things. I have a passion for design, communication, and technology. You can contact me at <a class="email" href="mailto:nat@natwelch.com">nat@natwelch.com</a> or at <a class="tel">707.799.8675</a>.</p>
+            <p id="first">My name is <abbr title="Nathaniel Dehn Welch">Nat</abbr>, and I am a software developer and a student.</p>
+            <p>I am currently <span id='age'>23</span> years old and love to create things. I have a passion for design, communication, and technology. You can contact me at <a class="email" href="mailto:nat@natwelch.com">nat@natwelch.com</a> or at <a class="tel">707.799.8675</a>.</p>
             <p>My persona is scattered across the web in various places, such as: </p>
             <ul id="melinks">
                <li class="sortme" id="link-blog"> <a href="http://pseudoweb.net" rel="me" title="Nat Welch's Blog" class="url">My Blog</a> </li>
                <li class="sortme" id="link-photos"> <a href="http://flickr.com/photos/icco" title="Photos" rel="me" class="url">My Photos <small>(on Flickr)</small></a> </li>
                <li class="sortme" id="link-code"> <a href="http://icco.github.com" title="My Code on GitHub" rel="me" class="url">My Projects <small>(on GitHub)</small></a> </li>
-               <li class="sortme" id="link-resume"> <a href="http://natwelch.com/resume/" title="My Resume in HTML" rel="me" onclick="javascript:urchinTracker('/resume')">My Resume</a> </li>
+               <li class="sortme" id="link-resume"> <a href="http://natwelch.com/resume/" title="My Resume in HTML" rel="me">My Resume</a> </li>
                <li class="sortme" id="link-linkedin"> <a href="http://www.linkedin.com/in/natwelch" title="Nathaniel Welch on LinkedIn" rel="me" class="url" >My LinkedIn</a> </li>
                <li class="sortme" id="link-github"> <a href="http://www.github.com/icco" title="Nat Welch on Github" rel="me" class="url">My GitHub</a> </li>
                <li class="sortme" id="link-twitter"> <a href="http://twitter.com/icco" title="Nat Welch on Twitter" rel="me" class="url">My Twitter</a> </li>
