Clean up friends list.

--- a/friends/index.html
+++ b/friends/index.html
@@ -15,48 +15,38 @@
       <link href="../includes/css/style.css" rel="stylesheet" type="text/css" />
       <link rel="shortcut icon" href="/favicon.ico">
       <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-      <link rel="stylesheet" href="includes/css/reset.css?v=2">
+      <link rel="stylesheet" href="includes/css/reset.css?v=3">
       <link rel="stylesheet" href="includes/css/style.css?v=5">
-      <link rel="stylesheet" media="handheld" href="includes/css/handheld.css?v=1">
-      <script src="includes/js/modernizr-1.5.min.js"></script>
    </head>
-   <!--[if lt IE 7 ]> <body class="ie6"> <![endif]-->
-   <!--[if IE 7 ]>    <body class="ie7"> <![endif]-->
-   <!--[if IE 8 ]>    <body class="ie8"> <![endif]-->
-   <!--[if IE 9 ]>    <body class="ie9"> <![endif]-->
-   <!--[if (gt IE 9)|!(IE)]><!--> <body> <!--<![endif]-->
+   <body>
       <div id="container">
          <div id="friends">
             <h1>People I know and like</h1>
-             <small>who also have a web presence...</small>
+            <small>who also have a web presence...</small>
             <ul id="links">
                <li><a href="http://prenticew.com" rel="friend met co-resident" title="Prentice's Site">Prentice Wongvibulsin</a> - Roommate and an amazing coder and photographer.</li>
                <li><a href="http://dmpatierno.com/" rel="friend met co-worker" title="Dave Patierno">Dave Patierno</a> - Good friend and coworker.</li>
-               <li><a href="http://www.wiredgoats.com/" rel="friend met" title="Dustin's secret site of nothing">Dustin Mollo</a> - The man who got me started in Linux and a great friend.</li>
-               <li><a href="http://mgius.livejournal.com/" title="mgius's Livejournal. Angst Ensues" rel="friend co-resident met" >Mark Gius</a> - Roommate and good friend.</li>
-               <li><a href="http://users.csc.calpoly.edu/~boppenhe/" title="Brian's Webpage" rel="friend met">Brian Oppenheim</a> - Probably one of the most diligent and impressive coders I know.</li>
-               <li><a href="http://www.lydiadehn.com/" title="Mom" rel="met parent">Lydia Dehn</a> - My mom and her Art.</li>
+               <li><a href="http://markgius.com/" title="Mark Gius" rel="friend co-resident met" >Mark Gius</a> - Roommate and good friend.</li>
                <li><a href="http://grantlandchew.com/" rel="friend met" title="Grantland Chew">Grantland Chew</a> - A great coder with an awesome sense of style.</li>
                <li><a href="http://reedmorse.com/" rel="friend met" title="Reed Morse">Reed Morse</a> - Great designer, entrepreneur and developer.</li>
+               <li><a href="http://www.lydiadehn.com/" title="Mom" rel="met parent">Lydia Dehn</a> - My mom and her Art.</li>
 
                <!-- Commented out until he gets his act together...
                <li><a href="http://www.dcwelch.com/" rel="met parent">David Welch</a></li>
+               <li><a href="http://www.wiredgoats.com/" rel="friend met" title="Dustin's secret site of nothing">Dustin Mollo</a> - The man who got me started in Linux and a great friend.</li>
                -->
             </ul>
             <div id="backButton"><a href=".." title="natwelch.com">&laquo; Go Back Home</a></div>
          </div>
-      </div> <!--! end of #container -->
+      </div>
 
       <!--"Why, Mr. Anderson? Why, why, why? Why do you do it? Why, why get up? Why keep fighting? Do you believe you're fighting for something, for more than your survival? Can you tell me what it is, do you even know? Is it freedom, or truth, perhaps peace, could it be for love? Illusions, Mr. Anderson, vagaries of perception. Temporary constructs of a feeble human intellect trying desperately to justify an existence that is without meaning or purpose! And all of them as artificial as the matrix itself, although only a human mind could invent something as insipid as love. You must be able to see it Mr. Anderson, you must know it by now. You can't win, it's pointless to keep fighting! Why, Mr. Anderson, why? Why do you persist?" - Agent Smith -->
 
       <script src="http://ajax.googleapis.com/ajax/libs/mootools/1.2.4/mootools.js"></script>
       <script src="includes/js/mootools-1.2.4.4-more.js"></script>
-      <script src="includes/js/nat.js?v=1"></script>
+      <script src="includes/js/nat.js?v=5"></script>
       <script src="includes/js/konami.js?v=1"></script>
 
-      <!--[if lt IE 7 ]>
-         <script src="js/dd_belatedpng.js?v=1"></script>
-      <![endif]-->
       <script>
          var _gaq = [['_setAccount', 'UA-333449-2'], ['_trackPageview']];
          (function(d, t) {
