Adding aaron to friends list.

--- a/friends/index.html
+++ b/friends/index.html
@@ -30,6 +30,7 @@
                <li><a href="http://grantlandchew.com/" rel="friend met" title="Grantland Chew">Grantland Chew</a> - A great coder with an awesome sense of style.</li>
                <li><a href="http://reedmorse.com/" rel="friend met" title="Reed Morse">Reed Morse</a> - Great designer, entrepreneur and developer.</li>
                <li><a href="http://www.lydiadehn.com/" title="Mom" rel="met parent">Lydia Dehn</a> - My mom and her Art.</li>
+               <li><a href="http://aaronbshaw.com/" title="Aaron Shaw" rel="met friend">Aaron Shaw</a> - Probably my oldest friend. Does business type stuff for startups.</li>
 
                <!-- Commented out until he gets his act together...
                <li><a href="http://www.dcwelch.com/" rel="met parent">David Welch</a></li>
