--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
       <link rel="openid.delegate" href="https://openid.claimid.com/icco" />
 
       <link rel="shortcut icon" href="/favicon.ico">
-      <link rel="apple-touch-icon" href="/apple-touch-icon.png">
       <link rel="stylesheet" href="includes/css/reset.css?v=3">
-      <link rel="stylesheet" href="includes/css/style.css?v=7">
+      <link rel="stylesheet" href="includes/css/style.css?v=8">
    </head>
    <body>
       <div id="container">
          <div class="data" id="data1">
-            <p id="first">My name is <abbr title="Nathaniel Dehn Welch">Nat</abbr>, and I am a software developer and a student.</p>
-            <p>I am currently <span id='age'>23</span> years old and love to create things. I have a passion for design, communication, and technology. You can contact me at <a class="email" href="mailto:nat@natwelch.com">nat@natwelch.com</a> or at <a class="tel">707.799.8675</a>.</p>
+            <p id="first">My name is <abbr title="Nathaniel Dehn Welch">Nat</abbr>, and I am a professional software developer.</p>
+            <p>I am currently <span id='age'>23</span> years old and love to create things. I have a passion for design, communication, and building communities. You can contact me at <a class="email" href="mailto:nat@natwelch.com">nat@natwelch.com</a> or at <a class="tel">707.799.8675</a>.</p>
+
             <p>My persona is scattered across the web in various places, such as: </p>
             <ul id="melinks">
                <li class="sortme" id="link-blog"> <a href="http://pseudoweb.net" rel="me" title="Nat Welch's Blog" class="url">My Blog</a> </li>
@@ -38,8 +38,6 @@
                <li class="sortme" id="link-twitter"> <a href="http://twitter.com/icco" title="Nat Welch on Twitter" rel="me" class="url">My Twitter</a> </li>
                <li class="sortme" id="link-lastfm"> <a href="http://www.last.fm/user/icco/" title="Nat Welch on Last.FM" rel="me" class="url">My Last.FM</a> </li>
                <li class="sortme" id="link-delicious"> <a href="http://pinboard.in/u:icco" title="Nat Welch on PinBoard" rel="me" class="url">My Links <small>(on PinBoard)</small></a> </li>
-               <li class="sortme" id="link-key"> <a id="publicKey" href="key/" title="Nat Welch's PGP Key">My Public Key</a> </li>
-               <li class="sortme" id="link-friends"> <a href="friends/" title="Nat Welch's Friends">My Friends</a> </li>
                <li class="sortme" id="link-homepage"> <a href="http://natwelch.com" title="Nat Welch Dot Com" rel="me" class="url">My Website</a> </li>
             </ul>
 
